--- a/k8s/dependent-services/configmap.yaml
+++ b/k8s/dependent-services/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: dependent-services
+  namespace: observability
 data:
   prometheus.yml: |
     global:
