--- a/k8s/application/deployment.yaml
+++ b/k8s/application/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: greenlight-api
+  namespace: greenlight-api
   labels:
     app: greenlight-api
 spec:
@@ -16,6 +17,10 @@ spec:
     spec:
       nodeSelector:
         type: application
+      initContainers:
+      - name: wait-for-db
+        image: busybox
+        command: ['sh', '-c', 'until nc -z postgres 5432; do echo waiting for postgres; sleep 2; done;']
       containers:
       - name: greenlight-api
         image: maheshsinghepc/greenlight-api:latest
@@ -34,30 +39,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: greenlight-api
+  namespace: greenlight-api
 spec:
   selector:
     app: greenlight-api
   ports:
-  - port: 4000
+  - name: http
+    port: 80
     targetPort: 4000
   type: ClusterIP
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: greenlight-api-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-spec:
-  ingressClassName: nginx
-  rules:
-  - host: greenlight.kube
-    http:
-      paths:
-      - path: /(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: greenlight-api
-            port:
-              number: 4000
